syntax = "proto3";

service Login {
  rpc RpcLogin(LoginCredentials) returns (LoginResponse) {}
  rpc RpcSignUp(SignUpCredentials) returns (LoginResponse) {}
}

message LoginCredentials {
  string username = 1;
  string password = 2;
}

message LoginResponse {
  string message=1;
  optional string token = 2;
}

message SignUpCredentials {
  string name = 1;
  string surname= 2;
  string username = 3;
  string password = 4;
}

